--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "bugs": {
     "url": "https://github.com/coinme/ember-intl-tel-input/issues"
   },
-  "authors": ["Justin Lau", "Michael Smyers"],
+  "authors": [
+    "Justin Lau",
+    "Michael Smyers"
+  ],
   "engines": {
     "node": ">= 0.10.0"
   },
@@ -36,6 +39,7 @@
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-qunit": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-component-inbound-actions": "1.1.0",
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.5",
