--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,11 @@
 {
   "name": "ember-intl-tel-input",
   "dependencies": {
+    "jquery-qrcode": "latest",
+    "ladda": "^0.9.8",
+    "components-font-awesome": "^4.6.3",
+    "intl-tel-input": "~9.0.3",
+
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
     "bootstrap-sass": "~3.3.5",
     "prism": "~1.0.0",
@@ -17,10 +22,6 @@
     "jquery": "2.1.4",
     "loader.js": "ember-cli/loader.js#3.4.0",
     "qunit": "~1.20.0",
-    "bootstrap": "~3.3.6",
-    "jquery-qrcode": "latest",
-    "ladda": "^0.9.8",
-    "components-font-awesome": "^4.6.3",
-    "intl-tel-input": "~9.0.3"
+    "bootstrap": "~3.3.6"
   }
 }
