--- a/package.json
+++ b/package.json
@@ -2,52 +2,6 @@
   "name": "ember-intl-tel-input",
   "version": "1.2.0",
   "description": "The default blueprint for ember-cli addons.",
-  "directories": {
-    "doc": "doc",
-    "test": "tests"
-  },
-  "scripts": {
-    "start": "ember server",
-    "build": "ember build",
-    "test": "ember try:testall"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/coinme/ember-intl-tel-input"
-  },
-  "bugs": {
-    "url": "https://github.com/coinme/ember-intl-tel-input/issues"
-  },
-  "authors": [
-    "Justin Lau",
-    "Michael Smyers"
-  ],
-  "engines": {
-    "node": ">= 0.10.0"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "broccoli-asset-rev": "^2.0.2",
-    "ember-cli": "1.13.13",
-    "ember-cli-app-version": "^1.0.0",
-    "ember-cli-autoprefixer": "0.4.1",
-    "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-google-analytics": "^1.4.0",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-ic-ajax": "0.2.5",
-    "ember-cli-inject-live-reload": "^1.4.0",
-    "ember-cli-qunit": "^2.1.0",
-    "ember-cli-uglify": "^1.2.0",
-    "ember-component-inbound-actions": "1.1.0",
-    "ember-disable-prototype-extensions": "^1.0.0",
-    "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-export-application-global": "^1.0.5",
-    "ember-prism": "0.0.5",
-    "ember-sinon": "^0.3.0",
-    "ember-try": "0.0.6",
-    "sinon": "^1.17.2"
-  },
   "keywords": [
     "ember-addon",
     "intl-tel-input",
@@ -61,11 +15,68 @@
     "input",
     "flag"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/coinme/ember-intl-tel-input"
+  },
+  "license": "MIT",
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
+  },
+  "scripts": {
+    "lint:hbs": "ember-template-lint .",
+    "lint:js": "eslint .",
+    "start": "ember serve",
+    "test": "ember test",
+    "build": "ember build",
+    "test:all": "ember try:each"
+  },
   "dependencies": {
-    "ember-cli-babel": "^5.1.6",
-    "ember-cli-htmlbars": "^1.0.11",
+    "ember-cli-babel": "^7.1.2",
+    "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-sass": "^5.2.0"
   },
+  "devDependencies": {
+    "@ember/optional-features": "^0.6.3",
+    "broccoli-asset-rev": "^2.7.0",
+    "ember-cli": "~3.9.0",
+    "ember-cli-autoprefixer": "0.4.1",
+    "ember-cli-dependency-checker": "^3.1.0",
+    "ember-cli-eslint": "^4.2.3",
+    "ember-cli-google-analytics": "^1.4.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
+    "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-template-lint": "^1.0.0-beta.1",
+    "ember-cli-uglify": "^2.1.0",
+    "ember-component-inbound-actions": "1.1.0",
+    "ember-disable-prototype-extensions": "^1.1.3",
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.1.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-prism": "0.0.5",
+    "ember-qunit": "^3.4.1",
+    "ember-resolver": "^5.0.1",
+    "ember-sinon": "^0.3.0",
+    "ember-source": "~3.9.0",
+    "ember-source-channel-url": "^1.1.0",
+    "ember-try": "^1.0.0",
+    "eslint-plugin-ember": "^5.2.0",
+    "eslint-plugin-node": "^7.0.1",
+    "loader.js": "^4.7.0",
+    "qunit-dom": "^0.8.0",
+    "sinon": "^1.17.2"
+  },
+  "engines": {
+    "node": "6.* || 8.* || >= 10.*"
+  },
+  "bugs": {
+    "url": "https://github.com/coinme/ember-intl-tel-input/issues"
+  },
+  "authors": [
+    "Justin Lau",
+    "Michael Smyers"
+  ],
   "ember-addon": {
     "configPath": "tests/dummy/config",
     "demoURL": "http://justin-lau.github.io/ember-intl-tel-input/"
