--- a/bower.json
+++ b/bower.json
@@ -1,27 +1,18 @@
 {
   "name": "ember-intl-tel-input",
   "dependencies": {
-    "jquery-qrcode": "latest",
-    "ladda": "^0.9.8",
-    "components-font-awesome": "^4.6.3",
     "intl-tel-input": "~9.0.3",
-
-    "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
     "bootstrap-sass": "~3.3.5",
     "prism": "~1.0.0",
+    "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
     "sinon": "~1.17.2",
     "sinonjs": "~1.17.1",
+    "bootstrap": "~3.3.6",
     "es5-shim": "~4.3.1",
-
-    "ember": "^2.0.0",
-    "ember-cli-shims": "0.1.3",
+    "qunit": "~1.20.0",
+    "ember-resolver": "~0.1.20",
     "ember-load-initializers": "0.1.7",
     "ember-qunit": "0.4.16",
-    "ember-qunit-notifications": "0.1.0",
-    "ember-resolver": "~0.1.20",
-    "jquery": "2.1.4",
-    "loader.js": "ember-cli/loader.js#3.4.0",
-    "qunit": "~1.20.0",
-    "bootstrap": "~3.3.6"
+    "ember-qunit-notifications": "0.1.0"
   }
 }
