--- a/package.json
+++ b/package.json
@@ -33,20 +33,21 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^7.1.2",
-    "ember-cli-htmlbars": "^3.0.0",
-    "ember-cli-sass": "^5.2.0"
+    "ember-cli-htmlbars": "^3.0.1"
   },
   "devDependencies": {
     "@ember/optional-features": "^0.6.3",
     "broccoli-asset-rev": "^2.7.0",
     "ember-cli": "~3.9.0",
     "ember-cli-autoprefixer": "0.4.1",
+    "ember-cli-babel": "^7.1.2",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-google-analytics": "^1.4.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-sass": "^5.2.0",
+    "ember-cli-shims": "^1.2.0",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
     "ember-component-inbound-actions": "1.1.0",
@@ -54,7 +55,6 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-prism": "0.0.5",
     "ember-qunit": "^3.4.1",
     "ember-resolver": "^5.0.1",
     "ember-sinon": "^0.3.0",
